--- a/part3/webapp/final/pypi_web_mongodb_f/production.ini
+++ b/part3/webapp/final/pypi_web_mongodb_f/production.ini
@@ -1,3 +1,27 @@
+# ############### PRODUCTION / UWSGI SECTION ######################
+#
+# uWSGI server configuration
+###
+[uwsgi]
+http = 127.0.0.1:9051
+master = true
+processes = 10
+enable-threads = true
+
+harakiri = 60
+harakiri-verbose = true
+limit-post = 65536
+post-buffering = 8192
+
+logto = /apps/logs/pypi_web/uwsgi.log
+log-slow = true
+need-app = true
+# ############### END PRODUCTION #################################
+
+
+
+
+
 ###
 # app configuration
 # https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
