--- a/part3/server_config/pypi.service
+++ b/part3/server_config/pypi.service
@@ -13,12 +13,13 @@ sudo apt update -y
 sudo apt install mongodb-org-shell=3.6.5 mongodb-org-tools=3.6.5 -y
 
 # Install some OS dependencies:
-sudo apt-get install --no-install-recommends -y -q build-essential git python3-dev python3-venv
+sudo apt-get install --no-install-recommends -y -q build-essential git python3-dev
 sudo apt-get install --no-install-recommends -y -q python3-pip wget
 sudo apt-get install --no-install-recommends -y -q unzip
 sudo apt-get install --no-install-recommends -y -q nginx
 # for gzip support in uwsgi
 sudo apt-get install --no-install-recommends -y -q libpcre3-dev libz-dev nload
+
 
 
 # Basic git setup
@@ -36,18 +37,10 @@ mkdir /apps/logs/pypi_web
 mkdir /apps/logs/pypi_web/app_log
 cd /apps
 
-# Create a virtual env for the app.
-cd /apps
-python3 -m venv venv
-source venv/bin/activate
-pip install --upgrade pip setuptools
 
 
-# clone the repo:
-cd /apps
-git clone https://github.com/mikeckennedy/build-pypi-mongodb-webcast-series.git
 
-# Setup the web app:
-cd /apps/build-pypi-mongodb-webcast-series/part3/webapp/final/pypi_web_mongodb_f
-pip install -r requirements.txt
 
+# Mongo user:
+# pypi_db_admin
+# 8hw8fxrtDVNd6tvtCRczEJ)oVuaaeUk6
