uWSGI settings for production.

--- a/part3/webapp/final/pypi_web_mongodb_f/production.ini
+++ b/part3/webapp/final/pypi_web_mongodb_f/production.ini
@@ -28,7 +28,7 @@ need-app = true
 ###
 
 [app:main]
-use = egg:pypi_web_mongo
+use = egg:pypi_web_mongodb
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -50,7 +50,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, pypi_web_mongo
+keys = root, pypi_web_mongodb
 
 [handlers]
 keys = console
@@ -62,10 +62,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_pypi_web_mongo]
+[logger_pypi_web_mongodb]
 level = WARN
 handlers =
-qualname = pypi_web_mongo
+qualname = pypi_web_mongodb
 
 [handler_console]
 class = StreamHandler
