Now we are talking to the cluster!

--- a/part3/webapp/final/pypi_web_mongodb_f/production.ini
+++ b/part3/webapp/final/pypi_web_mongodb_f/production.ini
@@ -36,6 +36,10 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
+use_database_auth = True
+database_name = pypi_demo
+database_server = devpypiclustertest-ib2xp.mongodb.net
+
 ###
 # wsgi server configuration
 ###
