--- a/part3/webapp/final/pypi_web_mongodb_f/development.ini
+++ b/part3/webapp/final/pypi_web_mongodb_f/development.ini
@@ -14,8 +14,13 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
+;use_database_auth = False
+;database_name = pypi_demo_full
+;database_server = localhost
+use_database_auth = True
+database_name = pypi_demo
+database_server = devpypiclustertest-ib2xp.mongodb.net
 
-db_name = pypi_demo_full
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
