Final live version?

--- a/part3/firstpypi/development.ini
+++ b/part3/firstpypi/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:pypi_web_mongodb
+use = egg:firstpypi
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -13,14 +13,6 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
-
-#use_database_auth = False
-database_name = pypi_demo_full
-#database_server = localhost
-use_database_auth = True
-#database_name = pypi_demo
-database_server = devpypiclustertest-ib2xp.mongodb.net
-
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -32,7 +24,7 @@ database_server = devpypiclustertest-ib2xp.mongodb.net
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:6559
+listen = localhost:6543
 
 ###
 # logging configuration
@@ -40,7 +32,7 @@ listen = localhost:6559
 ###
 
 [loggers]
-keys = root, pypi_web_mongodb
+keys = root, firstpypi
 
 [handlers]
 keys = console
@@ -52,10 +44,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_pypi_web_mongodb]
+[logger_firstpypi]
 level = DEBUG
 handlers =
-qualname = pypi_web_mongodb
+qualname = firstpypi
 
 [handler_console]
 class = StreamHandler
