--- a/part3/webapp/live/pypi_web_mongodb_live/development.ini
+++ b/part3/webapp/live/pypi_web_mongodb_live/development.ini
@@ -14,12 +14,17 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-use_database_auth = False
-database_name = pypi_demo_full
-database_server = localhost
+;use_database_auth = False
+;database_name = pypi_demo_full
+;database_server = localhost
+
 ;use_database_auth = True
 ;database_name = pypi_demo
 ;database_server = devpypiclustertest-ib2xp.mongodb.net
+
+use_database_auth = True
+database_name = pypi_demo
+database_server = cluster0-ib2xp.mongodb.net
 
 
 # By default, the toolbar only appears for clients from IP addresses
