--- a/part3/firstpypi/production.ini
+++ b/part3/firstpypi/production.ini
@@ -4,27 +4,13 @@
 ###
 
 [app:main]
-use = egg:pypi_web_mongodb
+use = egg:firstpypi
 
-pyramid.reload_templates = true
+pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes =
-    pyramid_debugtoolbar
-
-#use_database_auth = False
-database_name = pypi_demo_full
-#database_server = localhost
-use_database_auth = True
-#database_name = pypi_demo
-database_server = devpypiclustertest-ib2xp.mongodb.net
-
-
-# By default, the toolbar only appears for clients from IP addresses
-# '127.0.0.1' and '::1'.
-# debugtoolbar.hosts = 127.0.0.1 ::1
 
 ###
 # wsgi server configuration
@@ -32,7 +18,7 @@ database_server = devpypiclustertest-ib2xp.mongodb.net
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:6559
+listen = *:6543
 
 ###
 # logging configuration
@@ -40,7 +26,7 @@ listen = localhost:6559
 ###
 
 [loggers]
-keys = root, pypi_web_mongodb
+keys = root, firstpypi
 
 [handlers]
 keys = console
@@ -49,13 +35,13 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = WARN
 handlers = console
 
-[logger_pypi_web_mongodb]
-level = DEBUG
+[logger_firstpypi]
+level = WARN
 handlers =
-qualname = pypi_web_mongodb
+qualname = firstpypi
 
 [handler_console]
 class = StreamHandler
